--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@ body {
 
 .card {
     margin: 80px auto;
-    width: 500px;
+    width: 600px;
     background-color: hsl(0, 0%, 100%);
     padding: 30px;
-    border-radius: 20px;
+    border-radius: 16px;
 }
 
 .card-img {
@@ -24,13 +24,14 @@ body {
 .preparation-time {
     background-color:  hsl(330, 100%, 98%);
     border-radius: 10px;
-    padding: 10px;
+    padding: 8px;
 }
 
 h3 {
     color: hsl(332, 51%, 32%);
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 17px;
+    font-weight: bold;
 }
 
 h1, h2{
